--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<title>PICSSEL - Draw pixel art using CSS only.</title>
-<meta name="keywords" content="isometric,cubes,css3,coffeescript">
+<title>piCSSel-art - Draw pixel art using CSS only.</title>
+<meta name="keywords" content="pixel,css,draw,art,coffeescript">
 
 <link href="css/common.css" rel="stylesheet" type="text/css"/>
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-	<h1>PICSSEL</h1>
+	<h1>PICSSEL ART</h1>
 	<em>Created by <a href="https://twitter.com/#!/chinchang457" title="@chinchang457" target="blank">Kushagra Gour</a>.</em>
 </header>
 
@@ -46,8 +46,9 @@
 	<section id="right" class="box">
 		HTML code:
 		<div class="code-container">
-			<pre id="html-code">
-	&lt;div id="art"&gt;&lt;/div&gt;
+			<pre id="html-code">&lt;div id="art"&gt;
+	&lt;div&gt;&lt;/div&gt;
+&lt;/div&gt;
 			</pre>
 			
 
