size button title change

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			</div>
 		</p>
 		<p>
-			<button id="sizedown-button" class="button" title="Size down"><</button>
-			<canvas id="c" width="100" height="100" ></canvas>
-			<button id="sizeup-button" class="button" title="Size up">></button>
+			<button id="sizedown-button" class="button" title="Canvas size down"><</button>
+			<canvas id="c" width="80" height="80" ></canvas>
+			<button id="sizeup-button" class="button" title="Canvas size up">></button>
 		</p>
 		<p>
 			<button id="generate-button" class="button" title="Generate code!">Generate Code!</button>
@@ -40,6 +40,10 @@
 		</p>
 		<p>
 			<input class="color" value="#FF0000" title="Change color">
+		</p>
+
+		<p>
+			
 		</p>
 	</section>
 
