add a sample pixel art- mushroom

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</p>
 		<p>
 			<button id="sizedown-button" class="button" title="Canvas size down"><</button>
-			<canvas id="c" width="80" height="80" ></canvas>
+			<canvas id="c" width="160" height="160" ></canvas>
 			<button id="sizeup-button" class="button" title="Canvas size up">></button>
 		</p>
 		<p>
@@ -42,9 +42,10 @@
 			<input class="color" value="#FF0000" title="Change color">
 		</p>
 
-		<p>
-			
-		</p>
+		<div id="art">
+			<div></div>
+		</div>
+	
 	</section>
 
 	<section id="right" class="box">
