adds social buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <header>
 	<h1>PICSSEL ART</h1>
 	<em>Created by <a href="https://twitter.com/#!/chinchang457" title="@chinchang457" target="blank">Kushagra Gour</a>.</em>
+
+	<div id="socialz">
+		
+		<a href="https://twitter.com/share" class="twitter-share-button" data-via="chinchang457" data-hashtags="CSS3,coffeescript,javascript">Tweet</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fkushagragour.in%2Flab%2Fpicssel-art%2F&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
+	</div>
 </header>
 
 <div id="main-container">
@@ -78,3 +86,6 @@
 </body>
 
 </html>
+
+
+<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fkushagragour.in%2Flab%2Fpicssel-art%2F&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80&amp;appId=178953148812805" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
