--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	</div>
 </header>
 
+<div id="top-container"></div>
+
 <div id="main-container">
 	<section id="left" class="box">
 		<p>
@@ -74,6 +76,10 @@
 		</div>
 	</section>
 	<div class="clear"></div>
+</div>
+
+<div id="bottom-container">
+	<a href="https://github.com/chinchang/picssel-art">piCSSel-art</a> is released under the MIT License. 
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
