default color change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<button id="clear-button" class="button" title="Clear the canvas">Clear</button>
 		</p>
 		<p>
-			<input class="color" value="#FF0000" title="Change color">
+			<input class="color" value="#518B41" title="Change color">
 		</p>
 
 		<div id="art">
