--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div id="socialz">
 		
-		<a href="https://twitter.com/share" class="twitter-share-button" data-via="chinchang457" data-hashtags="CSS3,coffeescript,javascript">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-via="chinchang457" data-hashtags="CSS,pixelart,coffeescript,javascript">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fkushagragour.in%2Flab%2Fpicssel-art%2F&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
