--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
 <header>
 	<h1>PICSSEL ART</h1>
 	<em>Created by <a href="https://twitter.com/#!/chinchang457" title="@chinchang457" target="blank">Kushagra Gour</a>.</em>
@@ -108,7 +107,7 @@
 
 </script>
 
-
+<img id="screenshot" src="ss.png"/>
 </body>
 
 </html>
