--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 
 <head>
-<title>piCSSel-art - Draw pixel art using CSS only.</title>
+<title>piCSSel-art - Draw pixel art using CSS only!</title>
+<meta name="description" content="piCSSel-art lets you draw pixel art using CSS only" />
 <meta name="keywords" content="pixel,css,draw,art,coffeescript">
+<meta name="author" content="Kushagra Gour" />
 
 <link href="css/common.css" rel="stylesheet" type="text/css"/>
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
+<link rel="image_src" href="ss.png"/>
 
 </head>
 
@@ -107,7 +110,6 @@
 
 </script>
 
-<img id="screenshot" src="ss.png"/>
 </body>
 
 </html>
