--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <script src="js/jscolor.js"></script>
 <script src="js/picssel.js"></script>
 
-
+<a id="back-to-lab-button" href="../">Back to Lab</a>
 
 <!-- github ribbon -->
 <a href="https://github.com/chinchang/picssel-art"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
