remove href attribute from copy button

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</pre>
 			
 
-			<a id="copy-html" href="#" class="copy-button button">Copy</a>
+			<a id="copy-html" class="copy-button button">Copy</a>
 		</div>
 		CSS code:
 		<div class="code-container">
