--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			</div>
 		</p>
 		<p>
-			<button id="sizedown-button" class="button" title="Canvas size down"><</button>
+			<button id="sizedown-button" class="button" title="Canvas size down">-</button>
 			<canvas id="c" width="160" height="160" ></canvas>
-			<button id="sizeup-button" class="button" title="Canvas size up">></button>
+			<button id="sizeup-button" class="button" title="Canvas size up">+</button>
 		</p>
 		<p>
 			<button id="generate-button" class="button" title="Generate code!">Generate Code!</button>
