switch preview link from dabblet to codepen

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<a id="copy-css" class="copy-button button">Copy</a>
 		</div>
 		<p class="ralign">
-			See your art on <a href="http://dabblet.com/" target="blank">dabblet</a>.
+			See your art on <a href="http://codepen.io/" target="blank">Codepen.io</a>.
 		</p>
 	</section>
 	<div class="clear"></div>
