use the common lab css on website instead of a local copy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="pixel,css,draw,art,coffeescript">
 <meta name="author" content="Kushagra Gour" />
 
-<link href="css/common.css" rel="stylesheet" type="text/css"/>
+<link href="http://kushagragour.in/css/lab.css" rel="stylesheet" type="text/css"/>
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
 <link rel="image_src" href="ss.png"/>
 
