--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
 <link rel="image_src" href="ss.png"/>
 
+<script type="text/javascript">
+	if(typeof chrome != 'undefined' && chrome.app.isInstalled) {
+		document.head.className = document.head.className  + ' chrome-app ';
+	}
+</script>
+
 </head>
 
 <body>
