add abtest change

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 <script src="js/jscolor.js"></script>
 <script src="js/picssel.js"></script>
 
-<a id="back-to-lab-button" href="../">Back to Lab</a>
+<a id="back-to-lab-button" href="../">More cool experiments!</a>
 
 <!-- github ribbon -->
-<a href="https://github.com/chinchang/picssel-art"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a class="github-ribbon" href="https://github.com/chinchang/picssel-art"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
 
 <!-- google analyitcs -->
