correct data-url and script bug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <script type="text/javascript">
 	if(typeof chrome != 'undefined' && chrome.app.isInstalled) {
-		document.head.className = document.head.className  + ' chrome-app ';
+		document.querySelectorAll('html')[0].className = document.querySelectorAll('html')[0].className  + ' chrome-app ';
 	}
 </script>
 
@@ -25,7 +25,7 @@
 
 	<div id="socialz">
 		
-		<a href="https://twitter.com/share" class="twitter-share-button" data-via="chinchang457" data-hashtags="CSS,pixelart,coffeescript,javascript">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://kushagragour.in/lab/picssel-art/" data-via="chinchang457" data-hashtags="CSS,pixelart,coffeescript,javascript">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fkushagragour.in%2Flab%2Fpicssel-art%2F&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
