remove need of extra nested DIV. Use pseudo elements.

--- a/index.html
+++ b/index.html
@@ -75,17 +75,15 @@
 		<div id="art">
 			<div></div>
 		</div>
-	
+
 	</section>
 
 	<section id="right" class="box">
 		HTML code:
 		<div class="code-container">
-			<pre id="html-code">&lt;div id="art"&gt;
-	&lt;div&gt;&lt;/div&gt;
-&lt;/div&gt;
+			<pre id="html-code">&lt;div id="art"&gt;&lt;/div&gt;
 			</pre>
-			
+
 
 			<a id="copy-html" class="copy-button button">Copy</a>
 		</div>
