add drawing map

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header>
 			<h1>PICSSEL ART
 				<br>
-				<small>A tool to draw pixel art with CSS</small>
+				<small>Draw pixel art with CSS</small>
 			</h1>
 			<div id="socialz">
 			</div>
