--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 		<script src="js/jscolor.js"></script>
 		<script src="js/clipboard.min.js"></script>
+		<script src="js/pako.min.js"></script>
 		<script src="picssel.js?v=3"></script>
 
 		<a id="back-to-lab-button" href="../">More cool experiments!</a>
